
CPE:
- Adding detection of cygwin.
- Disabling C++ warning C4786.
- Adding multithreading detection for CodeWarrior.

CVM:
- Adapting to changes in 'MDR' library.

DBT:
- Adapting to changes in 'LST' library.
- Adapting to changes in 'LSTBCH' library.
- Adding the virtual 'DBTAllocate' method.
- Using 'E_NAVt' macro.
- Adapting to changes in 'DBT' library.

DTR:
- Fixing call to an iexistent method;

EPSMSC:
- Adapting to changes in the 'STF' library.

ERR:
- Adding the 'tReturn' item.
- Adapting to changes in 'STF' library.

FLW:
- Changing some type definition to simplify castings.

FLX:
- Adding some casting to avoid warning under VC++.
- Adapting to changes in 'BCH' library.

IDS:
- Adapting to changes in 'STK' library.

LST:
- Renaming 'CreateEntry' to 'New'.
- Introducing feature to fix some cast problem.
- Renaming 'Store' object in 'Locations' to avoid some name conflicts.
- Creation of the 'E_ROW' macro.

LSTBCH:
- Fixing bug.
- Adapting to changes in 'LST' library.

LSTCTN:
- Fixing bug.
- Adapting to changes in 'LST' library.
- Adapting to changes in 'CTN' library.
- Adding missing 'Flush()' to 'Delete' method.
- Renaming 'Create()' into 'New()' to avoid mistakes.

MDR:
- Using 'Store', 'Recall' and 'Flush' instead of 'Write', 'Read' and 'Synchronize'.
- Renaming 'data__' in 'datum__'.

MMI:
- Adding some missing 'const' qualifier'.

MMM:
- Fixing 'reset()' bug.

MTX:
- Using counter under cygwin due to problems with pthread mutexes .
- Adding of testing if we are in a multitasking context.
- Adapting to changes in 'TOL' library.

PIP:
- Adapting to changes in 'TOL' library.

QUE:
- Adding some missing 'const' qualifier.
- Adding 'E_STACK(r)' due to 'Exists()' method conflict due to changes in 'STK' library.

SSNMNG:
- Adapting to changes in 'LST' library.

STF:
- Renaming f[(out|in|err)[F]] to c[(out|in|err)[F]]

STK:
- Renaming 'ObjectExists' to 'Exists', to avoid some mistake risks.
- Adding 'Top()' method.
- Using 'E_NAVt' macro.