@@ -1,27 +1,29 @@
 /*
-  'dtfrmf' library by Claude L. Simon (epeios@epeios.org)
-  Requires the 'dtfrmf' header file ('dtfrmf.h').
-  Copyright (C) 2000 Claude L. SIMON (epeios@epeios.org).
+	'dtfrmf' library by Claude SIMON (csimon@epeios.org)
+	Requires the 'dtfrmf' header file ('dtfrmf.h').
+	Copyright (C) $COPYRIGHT_DATES$Claude SIMON (csimon@epeios.org).
+$_RAW_$
+	This file is part of the Epeios (http://epeios.org/) project.
 
-  This file is part of the Epeios (http://www.epeios.org/) project.
-  
-
-  This library is free software; you can redistribute it and/or
-  modify it under the terms of the GNU General Public License
-  as published by the Free Software Foundation; either version 2
-  of the License, or (at your option) any later version.
+	This library is free software; you can redistribute it and/or
+	modify it under the terms of the GNU General Public License
+	as published by the Free Software Foundation; either version 2
+	of the License, or (at your option) any later version.
  
-  This program is distributed in the hope that it will be useful,
-  but WITHOUT ANY WARRANTY; without even the implied warranty of
-  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  GNU General Public License for more details.
+	This program is distributed in the hope that it will be useful,
+	but WITHOUT ANY WARRANTY; without even the implied warranty of
+	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+	GNU General Public License for more details.
 
-  You should have received a copy of the GNU General Public License
-  along with this program; if not, go to http://www.fsf.org or write to the:
+	You should have received a copy of the GNU General Public License
+	along with this program; if not, go to http://www.fsf.org/
+	or write to the:
   
-                        Free Software Foundation, Inc.,
+         	         Free Software Foundation, Inc.,
            59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 */
+
+
 
 //	$Id$
 
@@ -37,7 +39,7 @@ public:
 	: ttr_tutor( DTFRMF_NAME )
 	{
 #ifdef DTFRMF_DBG
-		Version = DTFRMF_VERSION " (DBG)";
+		Version = DTFRMF_VERSION "\b\bD $";
 #else
 		Version = DTFRMF_VERSION;
 #endif
